--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,3 +24,13 @@ h2 {
   border-bottom: 1px solid rgb(59, 128, 255) !important;
   box-shadow: 0 1px 0 0 rgb(59, 128, 255) !important;
 }
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.item {
+  width: 30%;
+}
