--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,10 @@ h2 {
   border-bottom: 1px solid rgb(59, 128, 255) !important;
   box-shadow: 0 1px 0 0 rgb(59, 128, 255) !important;
 }
+.input-field input[type="password"]:focus {
+  border-bottom: 1px solid rgb(59, 128, 255) !important;
+  box-shadow: 0 1px 0 0 rgb(59, 128, 255) !important;
+}
 
 .gallery {
   display: flex;
@@ -41,8 +45,8 @@ h2 {
   margin: 26px auto;
 }
 
-#toast-container{
-  top: 30px  !important;
-  right: 20px  !important;
+#toast-container {
+  top: 30px !important;
+  right: 20px !important;
   left: auto !important;
 }
